syntax = "proto3";

package fileInfo;

option go_package = "../pb";

message FileObject {
  string file_name = 1;
  string file_md5 = 2;
  string file_type = 3;
  int64 file_size = 4;
}

message PreviewFileRequest {
  string file_id = 1;
  int64 user_id = 2;
}

message PreviewFileResponse {
  int32 code = 1;
  string pre_signed_url = 2;
  string expires_at = 3;
}

message GetFileInfoRequest {
  string file_id = 1;
  int64 user_id = 2;
}

message GetFileInfoResponse {
  int32 code = 1;
  FileObject file = 2;
}

service FileInfo {
  rpc PreviewFile (PreviewFileRequest) returns (PreviewFileResponse) {}
  rpc GetFileInfo (GetFileInfoRequest) returns (GetFileInfoResponse) {}
}